--- a/main/index.html
+++ b/main/index.html
@@ -21,5 +21,6 @@
             </article>
         </header>
     </main>
+    <!--This is just a conflict test, so when i merge everything together i will get an "error" or a conflict warning.-->
 </body>
 </html>
